--- a/prod/src/components/InputForm.css
+++ b/prod/src/components/InputForm.css
@@ -18,3 +18,9 @@
     background-color: rgb(0, 255, 255);
     color: black;
 }
+.button{
+    background-color: rgb(11, 241, 30);
+}
+.button1{
+    background-color: rgb(247, 26, 26);
+}
