commit css and Vedio

--- a/prod/src/components/InputForm.css
+++ b/prod/src/components/InputForm.css
@@ -24,3 +24,15 @@
 .button1{
     background-color: rgb(247, 26, 26);
 }
+.vedio{
+    text-align: center;
+}
+.logincss{
+    text-align: center;
+}
+.Email{
+    text-align: left;
+}
+.Pass{
+    text-align: left;
+}
