--- a/prod/src/components/PictureCard.css
+++ b/prod/src/components/PictureCard.css
@@ -37,8 +37,8 @@
     display: inline;
     padding: 4px;
     font-weight: bold;
-    background-color: rgba(255,255,255,.60);
-    color: rgb(252, 164, 0);
+    background-color: rgba(255, 255, 255, 0.877);
+    color: rgb(0, 0, 0);
 }
 
 .picturecard-actions {
@@ -58,5 +58,5 @@
 }
 
 .picturecard-actions > div:hover {
-    background-color: rgb(255, 220, 154);
+    background-color: rgb(109, 232, 248);
 }
