--- a/prod/src/components/InputForm.css
+++ b/prod/src/components/InputForm.css
@@ -2,10 +2,11 @@
     padding: 4px;
     border: 1px solid #cecece;
     border-radius: 2px;
+    text-align: center;
 }
 
 .btn {
-    background-color: rgb(0, 138, 138);
+    background-color: rgb(82, 221, 221);
     padding: 4px 8px;
     border: none;
     border-radius: 2px;
@@ -15,7 +16,7 @@
 }
 
 .btn:hover {
-    background-color: rgb(0, 255, 255);
+    background-color: rgb(59, 214, 201);
     color: black;
 }
 .button{
@@ -35,4 +36,13 @@
 }
 .Pass{
     text-align: left;
+}
+.logincss{
+    text-align: center;
+}
+.logout{
+    text-align: center;
+}
+.p1{
+    color: red;
 }
