--- a/prod/src/components/PictureCard.css
+++ b/prod/src/components/PictureCard.css
@@ -15,7 +15,7 @@
   position: relative;
 }
 
-.picturecard-name {
+.picturecard-caption {
     position: absolute;
     left: 0;
     right: 0;
@@ -28,7 +28,7 @@
     color: white;
 }
 
-.picturecard-weight {
+.picturecard-name {
     position: absolute;
     top: 8px;
     right: 8px;
